--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>Shape Tracker</title>
+  <title></title>
 </head>
 <body>
-  <h3>Enter three lengths to determine if they can make a triangle.</h3>
-  <form id="triangle-checker-form">
-    <label for="length1">Enter a number:</label>
-    <input id="length1" type="number">
-    <label for="length2">Enter a number:</label>
-    <input id="length2" type="number">
-    <label for="length3">Enter a number:</label>
-    <input id="length3" type="number">
-    <button type="submit">Submit</button>
+  <h1>THIS IS A TEST</h1>
+  <form>
   </form>
   <ul id="response"></ul>
 </body>
