--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
   <title></title>
 </head>
 <body>
-  <h1>THIS IS A TEST</h1>
-  <form>
+  <h1>Dino Ipsum!</h1>
+  <form id="submit">
+    <button type="submit" class="btn btn-outline-success">Submit</button>
   </form>
   <ul id="response"></ul>
 </body>
